@@ -4,7 +4,6 @@ ScriptedPlugin.scriptedSettings
 
 scriptedLaunchOpts ++= Seq(
 	"-Xmx1024M",
-	"-XX:MaxPermSize=256M",
 	"-Dplugin.version=" + version.value
 )
 
